--- a/cover.html
+++ b/cover.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>You don&#x27;t know ServiceNow APIs - You don&#x27;t know ServiceNow API</title>
+        <title>You don&#x27;t know ServiceNow APIs</title>
 
 
         <!-- Custom HTML head -->
@@ -134,7 +134,7 @@
                         </button>
                     </div>
 
-                    <h1 class="menu-title">You don&#x27;t know ServiceNow API</h1>
+                    <h1 class="menu-title"></h1>
 
                     <div class="right-buttons">
                         <a href="print.html" title="Print this book" aria-label="Print this book">
@@ -166,7 +166,7 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="you-dont-know-servicenow-apis"><a class="header" href="#you-dont-know-servicenow-apis">You don't know ServiceNow APIs</a></h1>
+                        <p><img src="./docs/cover.png" alt="You don't know ServiceNow APIs" /></p>
 
                     </main>
 
