--- a/print.html
+++ b/print.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>You don&#x27;t know ServiceNow API</title>
+        <title></title>
         <meta name="robots" content="noindex" />
 
 
@@ -135,7 +135,7 @@
                         </button>
                     </div>
 
-                    <h1 class="menu-title">You don&#x27;t know ServiceNow API</h1>
+                    <h1 class="menu-title"></h1>
 
                     <div class="right-buttons">
                         <a href="print.html" title="Print this book" aria-label="Print this book">
@@ -167,7 +167,7 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="you-dont-know-servicenow-apis"><a class="header" href="#you-dont-know-servicenow-apis">You don't know ServiceNow APIs</a></h1>
+                        <p><img src="./docs/cover.png" alt="You don't know ServiceNow APIs" /></p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="glideaggregate"><a class="header" href="#glideaggregate">GlideAggregate</a></h1>
 <p>    Recently, I gave an interview, where I was asked to write a script in scripts - background to print priority-wise count of all incident records. And I could not do it. Primarily because I did never use this API for anything else but getting the COUNT. So this is the time for doing what I did not do and probably you do not as well. So let us dig what this API is.</p>
 <p>    If you did not get what exactly I was asked to do, follow this steps:</p>
